[tool.poetry]
name = "python-da"
version = "0.1.0"
description = ""
authors = ["thaiquan <tranhaiquan.khtn@gmail.com>"]
readme = "README.md"
packages = [{include = "python_da"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
